--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@babel/runtime-corejs2": "^7.8.7",
     "@date-io/date-fns": "^1.3.6",
     "@lhci/cli": "^0.4.4",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/react": "^10.0.4",
     "@testing-library/react-hooks": "^3.2.1",
     "@zeit/next-source-maps": "0.0.3",
@@ -34,6 +36,7 @@
     "react-dom": "^17.0.1",
     "react-error-boundary": "^3.0.2",
     "react-scripts": "^4.0.0",
+    "react-ticker": "^1.2.2",
     "serve": "^11.3.0",
     "styled-jsx-css-loader": "^0.3.0",
     "tailwindcss": "^2.0.2",
