--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
     "babel-plugin-module-resolver": "^4.0.0",
+    "can-use-dom": "^0.1.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-jest": "^23.8.2",
@@ -27,7 +28,6 @@
     "next-pwa": "^5.0.5",
     "parse-link-header": "^1.0.1",
     "postcss": "^8.2.4",
-    "promise-memoize": "^1.2.1",
     "prop-types": "^15.7.2",
     "raw-loader": "^3.1.0",
     "react": "^17.0.1",
