--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "babel-plugin-groundskeeper-willie": "^1.3.2",
     "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-lodash": "^3.3.4",
-    "cross-env": "^5.2.0",
+    "chalk": "^4.1.0",
+    "child_process": "^1.0.2",
+    "commander": "^7.1.0",
+    "cross-env": "^5.2.1",
     "eslint": "^7.0.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -69,6 +72,7 @@
     "eslint-plugin-react-hooks": "^4.0.1",
     "eslint-plugin-tree-shaking": "^1.7.4",
     "file-loader": "^6.0.0",
+    "fs": "0.0.1-security",
     "jest": "^24.0.0",
     "jest-dom": "^4.0.0",
     "jest-html-reporter": "^2.5.0",
@@ -78,6 +82,7 @@
     "next-compose-plugins": "^2.2.0",
     "nodemon": "^1.12.1",
     "parse-git": "^1.1.2",
+    "path": "^0.12.7",
     "pre-commit": "^1.2.2",
     "raf": "^3.4.0",
     "react-perf-devtool": "^3.1.8",
@@ -110,6 +115,7 @@
     "clean": "rimraf node_modules/.cache .next",
     "preserve": "npm run export",
     "gitlint": "git log -1 --pretty=%B | gitlint",
+    "multilingual-build": "node ./command.js",
     "serve": "ws --directory out --static.maxage 1000000 --static.extensions html --static.index index.html --http2 --compress"
   },
   "pre-commit": [
