--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-jest": "^23.8.2",
     "jest-fetch-mock": "^3.0.3",
     "local-web-server": "^4.2.0",
+    "miragejs": "^0.1.41",
     "next": "^10.0.6",
     "next-pwa": "^5.0.5",
     "parse-link-header": "^1.0.1",
