--- a/package.json
+++ b/package.json
@@ -108,7 +108,8 @@
     "test:coverage": "npm run test:no-watch -- --coverage --colors",
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx,.ts,.tsx src pages",
     "lint:fix": "npm run lint -- --fix",
-    "dev": "next",
+    "dev": "APP_ENV=development next",
+    "mock": "MOCK_MODE=y npm run dev",
     "build": "cross-env NODE_ENV=production next build",
     "preexport": "npm run clean && npm run build",
     "export": "next export",
