--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "mq-polyfill": "^1.1.8",
     "@babel/runtime-corejs2": "^7.8.7",
     "@date-io/date-fns": "^1.3.6",
     "@lhci/cli": "^0.4.4",
@@ -24,7 +23,9 @@
     "eslint-plugin-jest": "^23.8.2",
     "jest-fetch-mock": "^3.0.3",
     "local-web-server": "^4.2.0",
+    "lodash": "^4.17.21",
     "miragejs": "^0.1.41",
+    "mq-polyfill": "^1.1.8",
     "next": "^10.0.6",
     "next-pwa": "^5.0.5",
     "parse-link-header": "^1.0.1",
@@ -82,7 +83,7 @@
     "jest-html-reporter": "^2.5.0",
     "jest-junit": "^10.0.0",
     "jest-svg-transformer": "^1.0.0",
-    "lint-staged": "^8.1.0",    
+    "lint-staged": "^8.1.0",
     "next-compose-plugins": "^2.2.0",
     "nodemon": "^1.12.1",
     "parse-git": "^1.1.2",
