--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-error-boundary": "^3.0.2",
+    "react-fast-marquee": "^1.1.1",
+    "react-marquee-text-component": "^1.0.4",
     "react-scripts": "^4.0.0",
     "react-ticker": "^1.2.2",
     "serve": "^11.3.0",
