--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@babel/runtime-corejs2": "^7.8.7",
     "@date-io/date-fns": "^1.3.6",
     "@lhci/cli": "^0.4.4",
-    "mq-polyfill": "^1.1.8",
     "@testing-library/react": "^10.0.4",
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
@@ -26,8 +25,10 @@
     "local-web-server": "^4.2.0",
     "lodash": "^4.17.21",
     "miragejs": "^0.1.41",
+    "mq-polyfill": "^1.1.8",
     "next": "^10.0.6",
     "next-pwa": "^5.0.5",
+    "next-seo": "^4.22.0",
     "parse-link-header": "^1.0.1",
     "postcss": "^8.2.4",
     "prop-types": "^15.7.2",
