--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "hipiStarter",
   "lang": "en",
   "description": "Bootstrapping kit for webapps at hipi",
-  "start_url": "https://nextpwa-72153.web.app/",
+  "start_url": "https://hipi-web.s3.ap-south-1.amazonaws.com/feed.html",
   "background_color": "#00aae7",
   "theme_color": "#00aae7",
   "dir": "ltr",
