--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lodash": "^4.17.21",
     "miragejs": "^0.1.41",
     "mq-polyfill": "^1.1.8",
-    "next": "^10.0.6",
+    "next": "^10.1.1",
     "next-pwa": "^5.0.5",
     "next-seo": "^4.23.0",
     "parse-link-header": "^1.0.1",
@@ -54,6 +54,7 @@
     "@babel/preset-env": "^7.5.2",
     "@babel/preset-modules": "^0.1.1",
     "@svgr/webpack": "^5.5.0",
+    "@tailwindcss/jit": "^0.1.17",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react-hooks": "^3.7.0",
     "@zeit/next-css": "^1.0.1",
