--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.2.4",
     "babel-plugin-module-resolver": "^4.0.0",
     "can-use-dom": "^0.1.0",
+    "date-fns": "^2.19.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-jest": "^23.8.2",
