--- a/nginx/nginx-http-auth.conf
+++ b/nginx/nginx-http-auth.conf
@@ -53,6 +53,8 @@ http {
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $http_host;
         proxy_pass http://localhost:3000;
+        auth_basic "Restricted";                    #For Basic Auth
+        auth_basic_user_file /etc/nginx/.htpasswd;  #For Basic Auth
       }
     }
 }
