--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/preset-modules": "^0.1.1",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/jit": "^0.1.17",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react-hooks": "^3.7.0",
     "@zeit/next-css": "^1.0.1",
