--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "lint:fix": "npm run lint -- --fix",
     "dev": "cross-env APP_ENV=development next",
     "staging":"cross-env APP_ENV=staging next",
+    "prod":"cross-env APP_ENV=prod next",
     "mock": "cross-env MOCK_MODE=y npm run dev",
     "build": "cross-env NODE_ENV=production next build",
     "preexport": "npm run clean && npm run build",
