--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx,.ts,.tsx src pages",
     "lint:fix": "npm run lint -- --fix",
     "dev": "cross-env APP_ENV=development next",
+    "debug": "cross-env APP_ENV=development NODE_OPTIONS='--inspect' next dev",
     "staging":"cross-env APP_ENV=staging next",
     "production":"cross-env APP_ENV=production next",
     "mock": "cross-env MOCK_MODE=y npm run dev",
