--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,16 +45,16 @@ http {
     ##
 
     server {
-      listen 80;
-      listen [::]:80;
-      server_name localhost;    
+      listen 80 default_server;
+      listen [::]:80 default_server;
+      server_name hipi.co.in www.hipi.co.in;    
 
       location / {
           proxy_set_header X-Forwarded-For $remote_addr;
           proxy_set_header Host $http_host;
           proxy_pass http://localhost:3000;
           
-          if ($request_method = 'OPTIONS') {
+        if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
             #
             # Om nom nom cookies
