--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,14 +47,14 @@ http {
     server {
       listen 80 default_server;
       listen [::]:80 default_server;
-      server_name hipi.co.in www.hipi.co.in;    
+      server_name localhost;    
 
       location / {
           proxy_set_header X-Forwarded-For $remote_addr;
           proxy_set_header Host $http_host;
           proxy_pass http://localhost:3000;
           
-          if ($request_method = 'OPTIONS') {
+        if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
             #
             # Om nom nom cookies
