--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,9 +45,11 @@ http {
     ##
 
     server {
-      listen 80 default_server;
-      listen [::]:80 default_server;
-      server_name localhost;    
+    #   listen 80 default_server;
+    #   listen [::]:80 default_server;
+    #   server_name localhost;    
+      listen      80 default_server;
+      server_name hipi.co.in www.hipi.co.in;
 
       location / {
           proxy_set_header X-Forwarded-For $remote_addr;
