--- a/package.json
+++ b/package.json
@@ -114,8 +114,9 @@
     "test:coverage": "npm run test:no-watch -- --coverage --colors",
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx,.ts,.tsx src pages",
     "lint:fix": "npm run lint -- --fix",
+    "local": "cross-env APP_ENV=local next",
     "dev": "cross-env APP_ENV=development next",
-    "debug": "cross-env APP_ENV=development NODE_OPTIONS='--inspect' next dev",
+    "debug": "cross-env APP_ENV=local NODE_OPTIONS='--inspect' next dev",
     "staging": "cross-env APP_ENV=staging next",
     "production": "cross-env APP_ENV=production next",
     "mock": "cross-env MOCK_MODE=y npm run dev",
