--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,7 +47,7 @@ http {
     server {
       listen 80 default_server;
       listen [::]:80 default_server;
-      server_name localhost;          
+      server_name _;          
 
       location / {
         proxy_set_header X-Forwarded-For $remote_addr;
