--- a/package.json
+++ b/package.json
@@ -117,17 +117,18 @@
     "local": "cross-env APP_ENV=local next",
     "dev": "cross-env APP_ENV=development next",
     "debug": "cross-env APP_ENV=local NODE_OPTIONS='--inspect' next dev",
+    "mdebug": "cross-env APP_ENV=local MOCK_MODE=y NODE_OPTIONS='--inspect' next dev",
     "staging": "cross-env APP_ENV=staging next",
     "production": "cross-env APP_ENV=production next",
-    "mock": "cross-env MOCK_MODE=y npm run dev",
+    "mock": "cross-env APP_ENV=production MOCK_MODE=y npm run dev",
     "build": "cross-env NODE_ENV=production next build",
     "preexport": "npm run clean && npm run build",
     "export": "next export",
     "export-mock": "cross-env MOCK_MODE=y npm run export",
     "prestart": "npm run clean && npm run build",
     "start": "cross-env NODE_ENV=production next start",
-    "prestart-mock": "cross-env MOCK_MODE=y npm run clean && npm run build",
-    "start-mock": "cross-env MOCK_MODE=y next start",
+    "prestart-mock": "cross-env APP_ENV=production MOCK_MODE=y npm run clean && npm run build",
+    "start-mock": "cross-env APP_ENV=production MOCK_MODE=y next start",
     "clean": "rimraf node_modules/.cache .next",
     "preserve": "cross-env MOCK_MODE=y  npm run export",
     "gitlint": "git log -1 --pretty=%B | gitlint",
