--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
       "jest",
       "react-hooks"
     ],
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
       "ecmaVersion": 2018,
       "sourceType": "module",
