--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.14.3",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.5.2",
     "@babel/preset-modules": "^0.1.1",
@@ -71,7 +72,7 @@
     "child_process": "^1.0.2",
     "commander": "^7.1.0",
     "cross-env": "^5.2.1",
-    "eslint": "^7.0.0",
+    "eslint": "^7.27.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^11.1.0",
