--- a/package.json
+++ b/package.json
@@ -128,8 +128,8 @@
     "export-mock": "cross-env MOCK_MODE=y npm run export",
     "prestart": "npm run clean && npm run build",
     "start": "cross-env NODE_ENV=production next start",
-    "prestart-mock": "cross-env APP_ENV=production MOCK_MODE=y npm run clean && npm run build",
-    "start-mock": "cross-env APP_ENV=production MOCK_MODE=y next start",
+    "prestart-mock": "cross-env APP_ENV=development MOCK_MODE=y npm run clean && npm run build",
+    "start-mock": "cross-env APP_ENV=development MOCK_MODE=y next start",
     "clean": "rimraf node_modules/.cache .next",
     "preserve": "cross-env MOCK_MODE=y  npm run export",
     "gitlint": "git log -1 --pretty=%B | gitlint",
