--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "styled-jsx-css-loader": "^0.3.0",
     "swiper": "^6.4.15",
     "tailwindcss": "^2.0.2",
+    "webpack-bundle-analyzer": "^4.4.2",
     "workbox-expiration": "^6.1.1",
     "workbox-precaching": "^6.1.1",
     "workbox-routing": "^6.1.1",
