--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "hipiStarter",
   "lang": "en",
   "description": "Bootstrapping kit for webapps at hipi",
-  "start_url": "https://hipi.co.in/feed",
+  "start_url": "https://hipi.co.in/feed/for-you",
   "background_color": "#00aae7",
   "theme_color": "#00aae7",
   "dir": "ltr",
