--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "lodash": "^4.17.21",
     "miragejs": "^0.1.41",
     "mq-polyfill": "^1.1.8",
-    "next": "^10.2.3",
+    "next": "^11.0.1",
     "next-pwa": "^5.0.5",
     "next-seo": "^4.23.0",
     "parse-link-header": "^1.0.1",
-    "postcss": "^8.2.4",
+    "postcss": "^8.3.0",
     "prop-types": "^15.7.2",
     "raw-loader": "^3.1.0",
     "react": "^17.0.2",
@@ -46,7 +46,8 @@
     "workbox-precaching": "^6.1.1",
     "workbox-routing": "^6.1.1",
     "workbox-strategies": "^6.1.1",
-    "workbox-window": "^6.1.0"
+    "workbox-window": "^6.1.0",
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
@@ -99,8 +100,7 @@
     "react-test-renderer": "^16.13.1",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^2.4.2",
-    "url-loader": "^4.1.1",
-    "webpack-bundle-analyzer": "^4.4.2",
+    "url-loader": "^4.1.1",    
     "webpack-clear-console": "^1.0.3"
   },
   "scripts": {
