--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-tree-shaking": "^1.7.4",
     "file-loader": "^6.0.0",
     "fs": "0.0.1-security",
+    "javascript-obfuscator": "^2.15.5",
     "jest": "^24.0.0",
     "jest-dom": "^4.0.0",
     "jest-html-reporter": "^2.5.0",
@@ -100,8 +101,9 @@
     "react-test-renderer": "^16.13.1",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^2.4.2",
-    "url-loader": "^4.1.1",    
-    "webpack-clear-console": "^1.0.3"
+    "url-loader": "^4.1.1",
+    "webpack-clear-console": "^1.0.3",
+    "webpack-obfuscator": "^3.3.2"
   },
   "scripts": {
     "lhci:serve": "ws --directory out --static.maxage 1000000 --static.extensions html --static.index index.html --http2 --compress",
