--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "jest-svg-transformer": "^1.0.0",
     "lint-staged": "^8.1.0",
     "next-compose-plugins": "^2.2.0",
+    "next-secure-headers": "^2.2.0",
     "nodemon": "^1.12.1",
     "parse-git": "^1.1.2",
     "path": "^0.12.7",
