--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "styled-jsx-css-loader": "^0.3.0",
     "swiper": "^6.4.15",
     "tailwindcss": "^2.0.2",
+    "webpack-bundle-analyzer": "^4.4.2",
     "workbox-expiration": "^6.1.1",
     "workbox-precaching": "^6.1.1",
     "workbox-routing": "^6.1.1",
     "workbox-strategies": "^6.1.1",
-    "workbox-window": "^6.1.0",
-    "webpack-bundle-analyzer": "^4.4.2"
+    "workbox-window": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
