--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.0.2",
     "react-google-login": "^5.2.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^8.33.1",
     "react-scripts": "^4.0.0",
     "react-window": "^1.8.6",
