--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -50,7 +50,7 @@ http {
       server_name localhost;   
       large_client_header_buffers 4 32k;
 
-   location /lang-en {
+        location ~ ^/(sitemapindex.xml|sitemap.xml|lang-en) {
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
