--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "lang": "en",
   "description": "hipi",
   "start_url": "https://hipi.co.in/feed/for-you",
-  "background_color": "#00aae7",
-  "theme_color": "#00aae7",
+  "background_color": "#fff",
+  "theme_color": "#fff",
   "dir": "ltr",
   "display": "fullscreen",
   "orientation": "portrait",
