--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/runtime-corejs2": "^7.8.7",
     "@date-io/date-fns": "^1.3.6",
     "@lhci/cli": "^0.7.2",
+    "@storyblok/react": "^1.1.0",
     "@testing-library/react": "^10.0.4",
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
