--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^10.0.4",
     "@zeit/next-source-maps": "0.0.3",
     "autoprefixer": "^10.2.4",
+    "axios": "^0.27.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "can-use-dom": "^0.1.0",
     "date-fns": "^2.19.0",
