--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.159.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.159.0",
+    "@aws-sdk/credential-providers": "^3.159.0",
+    "@aws-sdk/lib-storage": "^3.171.0",
     "@babel/runtime-corejs2": "^7.8.7",
     "@convivainc/conviva-js-coresdk": "^4.5.8",
     "@convivainc/conviva-js-html5": "^4.0.9",
