--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,13 @@
 {
   "extends": ["next", "next/core-web-vitals"],
-  "plugins": ["react"],
   "rules": {
-    "react/no-unknown-property": ["error", { "ignore": ["jsx"] }]
+    "react/no-unknown-property": [
+      2,
+      {
+        "ignore": [
+          "jsx"
+        ]
+      }
+    ]
   }
   }
