--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@aws-sdk/credential-provider-cognito-identity": "^3.159.0",
     "@aws-sdk/credential-providers": "^3.159.0",
     "@aws-sdk/lib-storage": "^3.171.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.18.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
     "@babel/runtime-corejs2": "^7.8.7",
     "@convivainc/conviva-js-coresdk": "^4.5.8",
     "@convivainc/conviva-js-html5": "^4.0.9",
