--- a/package.json
+++ b/package.json
@@ -10,14 +10,10 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.159.0",
-    "@aws-sdk/credential-provider-cognito-identity": "^3.159.0",
-    "@aws-sdk/credential-providers": "^3.159.0",
+    "@aws-sdk/client-s3": "^3.208.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.208.0",
+    "@aws-sdk/credential-providers": "^3.208.0",
     "@aws-sdk/lib-storage": "^3.171.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.18.9",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
     "@babel/runtime-corejs2": "^7.8.7",
     "@convivainc/conviva-js-coresdk": "^4.5.8",
     "@convivainc/conviva-js-html5": "^4.0.9",
@@ -122,7 +118,11 @@
     "source-map-explorer": "^2.4.2",
     "url-loader": "^4.1.1",
     "webpack-clear-console": "^1.0.3",
-    "webpack-obfuscator": "^3.3.2"
+    "webpack-obfuscator": "^3.3.2",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.18.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9"
   },
   "scripts": {
     "lhci:serve": "ws --directory out --static.maxage 1000000 --static.extensions html --static.index index.html --http2 --compress",
