--- a/package.json
+++ b/package.json
@@ -61,7 +61,11 @@
     "workbox-precaching": "^6.1.1",
     "workbox-routing": "^6.1.1",
     "workbox-strategies": "^6.1.1",
-    "workbox-window": "^6.1.0"
+    "workbox-window": "^6.1.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.18.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
@@ -118,11 +122,7 @@
     "source-map-explorer": "^2.4.2",
     "url-loader": "^4.1.1",
     "webpack-clear-console": "^1.0.3",
-    "webpack-obfuscator": "^3.3.2",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.18.9",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.18.9"
+    "webpack-obfuscator": "^3.3.2"
   },
   "scripts": {
     "lhci:serve": "ws --directory out --static.maxage 1000000 --static.extensions html --static.index index.html --http2 --compress",
