--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.18.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
     "@aws-sdk/client-s3": "^3.208.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.208.0",
     "@aws-sdk/credential-providers": "^3.208.0",
@@ -53,7 +57,6 @@
     "react-scripts": "^4.0.0",
     "react-window": "^1.8.6",
     "serve": "^11.3.0",
-    "styled-jsx-css-loader": "^2.0.1",
     "swiper": "^6.4.15",
     "tailwindcss": "^2.0.2",
     "webpack-bundle-analyzer": "^4.4.2",
@@ -61,11 +64,7 @@
     "workbox-precaching": "^6.1.1",
     "workbox-routing": "^6.1.1",
     "workbox-strategies": "^6.1.1",
-    "workbox-window": "^6.1.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.18.9",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.18.9"
+    "workbox-window": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
