--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.208.0",
-    "@aws-sdk/credential-provider-cognito-identity": "^3.208.0",
-    "@aws-sdk/credential-providers": "^3.208.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.18.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@aws-sdk/client-s3": "^3.100.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.100.0",
+    "@aws-sdk/credential-providers": "^3.100.0",
     "@aws-sdk/lib-storage": "^3.171.0",
     "@babel/runtime-corejs2": "^7.8.7",
     "@convivainc/conviva-js-coresdk": "^4.5.8",
@@ -61,11 +65,7 @@
     "workbox-precaching": "^6.1.1",
     "workbox-routing": "^6.1.1",
     "workbox-strategies": "^6.1.1",
-    "workbox-window": "^6.1.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.18.9",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-numeric-separator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.18.9"
+    "workbox-window": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
