--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,7 +30,7 @@
       "src": "/android-icon-192x192-dunplab-manifest-17016.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     },
     {
       "src": "/apple-icon-180x180-dunplab-manifest-17016.png",
@@ -40,7 +40,7 @@
     {
       "src": "/output-onlinepngtools_1.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "57x57"
     },
     {
       "src": "/apple-icon-152x152-dunplab-manifest-17016.png",
