--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "background_color": "#fff",
   "theme_color": "#fff",
   "display": "fullscreen",
-  "orientation": "any",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "/android-icon-192x192-dunplab-manifest-17016.png",
