changes pwa display type

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "scope": "/",
   "background_color": "#fff",
   "theme_color": "#fff",
-  "display": "fullscreen",
+  "display": "standalone",
   "orientation": "portrait",
   "icons": [
     {
