--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,11 @@
   "orientation": "portrait",
   "icons": [
     {
+      "src": "/icons/icon-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    },
+    {
       "src": "/android-icon-192x192-dunplab-manifest-17016.png",
       "type": "image/png",
       "sizes": "192x192"
