--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Hipi",
   "lang": "en",
   "start_url": "/",
-  "scope": "/",
+  "scope": "./",
   "background_color": "#fff",
   "theme_color": "#fff",
   "display": "standalone",
